# forge-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __PLANNER.md  package-lock.json  package.json  pyproject.toml
.agent/memory/: agents_state.json  docuchat_analysis.md  global_context.md
.agent/rules/: 01-identity.md
.agent/workflows/docuchat-implementation/: WORKFLOW.md
docs/: .htaccess  404.html  __IMPORTANT-CONSIDERATIONS.md  api-reference.html  configuration.html  examples.html  getting-started.html  github-integration.html  index.html  tool-reference.html
docs/Logos/: Logo.psd
forge/: __init__.py
forge/cli/: fs.py  github.py  main.py  run.py  test.py
forge/config/: __init__.py
forge/core/: executor.py  filesystem.py  github.py  llm.py  profiler.py  testing.py
forge/ui/: styling.py
src/: cli.ts
src/core/: deepseek.ts
src/ui/: glassmorphic.ts
tests/: test_cli.py
web/: index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/components/layout/: Footer.tsx
web/src/components/ui/: GlassPanel.tsx  index.ts
web/src/pages/: AIDashboard.tsx  Dashboard.tsx
