[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-cli"
version = "0.1.0"
description = "🔥 Forge - Your DeepSeek-powered development forge. Shape code, manage GitHub, and ship faster from your terminal."
readme = "README.md"
authors = [{name = "LebToki"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0",
    "rich>=13.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "PyGithub>=2.0.0",
    "GitPython>=3.1.0",
    "keyring>=24.0.0",
    "toml>=0.10.0",
]

[project.scripts]
forge = "forge.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0.0",
]
github = [
    "PyGithub>=2.0.0",
    "GitPython>=3.1.0",
]

[tool.setuptools.packages.find]
include = ["forge*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100
